--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <version>1.18.10</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>3.3.3</version>
+        </dependency>
 
     </dependencies>
 
